fix for auto zoom on mobile

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,5 +1,12 @@
 @import "variables";
 
+// fix for zoom
+@media (max-width: $screen-md-min) {
+  input {
+    font-size: 16px !important;
+  }
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
